--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,35 @@
 *
 * ======================================================= */
 
+* ======================================================= */
+@charset "utf-8";
+/* CSS Document */
+body{
+    margin:0;
+    padding:0;
+        }
+.navbar.navbar-default{
+    background-image:none;
+    background-color:rgba(255, 255, 255, 0.79);
+    opacity: 0.2;
+    border:none;
+}
+.navbarheader{
+    color:#FFFFFF;
+    margin-top:-10px;
+    font-family: 'Lobster', cursive;
+}
+.nav,.navbar-nav{
+    font-size:15px;
+    color:white;
+
+}
+
+
+
+
+
+
 .containeresa {
   position: relative;
   width: 100%;
@@ -28,8 +57,6 @@
   height: 100%;
   border: none;
 }
-
-
 
 
 
